# aether-monitor

./: Cargo.toml  README.md
scripts/: smoke-run.sh
src/: gpu.rs  lib.rs  main.rs  telemetry.rs  ui.rs
